# ztd

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  README.md  clang-format.sh  clang-tidy.sh  configure-clang.sh  configure-gcc.sh  configure.sh  meson.build  meson_options.txt
.github/workflows/: build-dependencies.txt  stale.yml  test_suite.yml  ztd-test_suite.yml
benchmarks/: README.md  meson.build
benchmarks/pch/: cxx_pch.hxx
benchmarks/src/: main.cxx  utils.cxx  utils.hxx
benchmarks/src/base/: checksum.cxx  string-python.cxx
docs/: integer.md  string_python.md
include/ztd/: ztd.hxx  ztd_extra.hxx  ztd_logger.hxx  ztd_types.hxx
include/ztd/detail/: byte_size.hxx  checksum.hxx  concepts.hxx  filesize.hxx  fuse.hxx  map.hxx  panic.hxx  random.hxx  smart_cache.hxx  string_base64.hxx  string_python.hxx  string_random.hxx  timer.hxx  types.hxx  utils.hxx  vector_templates.hxx  version.hxx
include/ztd/extra/: glaze.hxx
include/ztd/impl/: checksum.hxx  filesize.hxx  fuse.hxx  python_builtin.hxx  smart_cache.hxx  string_base64.hxx  string_python.hxx  string_random.hxx  string_utils.hxx  timer.hxx  types.hxx  vector_templates.hxx
src/: c-interface.cxx  c-utils.cxx  c_utils.cxx  checksum.cxx  filesize.cxx  program.cxx  python_builtin.cxx  random.cxx  string-python.cxx  string-random.cxx  string-utils.cxx  string_base64.cxx  string_python.cxx  string_random.cxx  string_utils.cxx  timer.cxx  ztd-env.hxx  ztd-files.hxx  ztd-filesystem.hxx  ztd-logger.hxx  ztd-shell.hxx  ztd-stat.hxx  ztd-string.hxx  ztd-sys.hxx  ztd.cxx  ztd.hxx
src/env/: env.cxx
src/files/: filesize-IEC.cxx  filesize-SI.cxx  filesize_IEC.cxx  filesize_SI.cxx
src/impl/: array-templates.hxx  c-interface.hxx  string-python.hxx  string-random.hxx  string-utils.hxx  string.hxx  timer.hxx  types.hxx  vector-string.hxx  vector-templates.hxx  ztd-array-templates.hxx  ztd-c-interface.hxx  ztd-lazy.hxx  ztd-string.hxx  ztd-timer.hxx  ztd-vector-string.hxx  ztd-vector-templates.hxx  ztd-vector.hxx
src/impl/env/: env.hxx
src/linux/: generic.cxx
src/logger/: logger.cxx
src/shell/: execute.cxx  utils.cxx
src/sort/: alphanumeric.cxx  compare.cxx  random.cxx
src/sys/: chmod.cxx  chown.cxx  fnmatch.cxx  group.cxx  kill.cxx  passwd.cxx  stat.cxx  statvfs.cxx  statx.cxx  strdup.cxx  utime.cxx
test/: README.md  main.cxx  meson.build
test/pch/: cxx_pch.hxx
test/src/: main.cxx  test-array-templates.hxx  test-lazy.hxx  test-string-random.hxx  test-string.hxx  test-vector-string.hxx  test-vector-templates.hxx
test/src/files/: test-filesize.hxx
tests/: meson.build
tests/data/linux/proc/: stat-01  stat-02  stat-03  statm-01  statm-02  statm-03
tests/pch/: cxx_pch.hxx
tests/src/: main.cxx  test-array-templates.cxx  test-c-interface.hxx  test-string-python.cxx  test-string-utils.cxx  test-string.cxx  test-string.hxx  test-timer.cxx  test-timer.hxx  utils.cxx  utils.hxx
tests/src/base/: test-array-templates.cxx  test-c-interface.cxx  test-string-python.cxx  test-string-random.cxx  test-string-utils.cxx  test-timer.cxx  test-vector-templates.cxx  test_array_templates.cxx  test_c_utils.cxx  test_checksum.cxx  test_filesize.cxx  test_filesize_IEC.cxx  test_filesize_SI.cxx  test_fuse.cxx  test_map.cxx  test_program.cxx  test_python_builtin.cxx  test_random.cxx  test_smart_cache.cxx  test_string_base64.cxx  test_string_python.cxx  test_string_random.cxx  test_string_utils.cxx  test_timer.cxx  test_types.cxx  test_utils.cxx  test_vector_templates.cxx
tests/src/base/string_python/: capitalize.cxx  center.cxx  count.cxx  expandtabs.cxx  isalnum.cxx  isalpha.cxx  isascii.cxx  isdecimal.cxx  isdigit.cxx  islower.cxx  isnumeric.cxx  isspace.cxx  istitle.cxx  isupper.cxx  join.cxx  lower.cxx  partition.cxx  remove_prefix.cxx  remove_suffix.cxx  removeprefix.cxx  removesuffix.cxx  replace.cxx  rpartition.cxx  rsplit.cxx  split.cxx  splitlines.cxx  strip.cxx  swapcase.cxx  title.cxx  upper.cxx  zfill.cxx
tests/src/byte/iec/: arithmetic.cxx  assignment.cxx  comparison.cxx  constructor.cxx  functions.cxx  literals.cxx  utils.hxx
tests/src/byte/si/: arithmetic.cxx  assignment.cxx  comparison.cxx  constructor.cxx  functions.cxx  literals.cxx  utils.hxx
tests/src/deprecated/: test-string.cxx  test-string.hxx
tests/src/env/: test-env.cxx  test_env.cxx
tests/src/files/: test-filesize-IEC.cxx  test-filesize-SI.cxx  test-filesize.cxx  test-filesize.hxx  test-filesizeSI.cxx  test_filesize_IEC.cxx  test_filesize_SI.cxx
tests/src/linux/: test_generic.cxx
tests/src/linux/proc/: test_generic.cxx  test_proc_stat.cxx  test_proc_statm.cxx
tests/src/logger/: logger.cxx  test-logger.cxx  test_logger.cxx
tests/src/shell/: test-execute.cxx  test-execute.hxx  test-utils.cxx  test_execute.cxx  test_utils.cxx
tests/src/sort/: test_alphanumeric.cxx  test_compare.cxx  test_random.cxx
tests/src/stat/: test-stat.cxx  test_stat.cxx
tests/src/sys/: test-strdup.cxx  test_group.cxx  test_passwd.cxx  test_stat.cxx  test_strdup.cxx
tests/src/types/: concepts.cxx  custom.cxx  test_fuse.cxx  type_traits.cxx  utils.hxx
tests/src/types/extra/: glaze.cxx
tests/src/types/integer_signed/: arithmetic.cxx  assignment.cxx  cast.cxx  comparison.cxx  constants.cxx  constructor.cxx  functions.cxx  functions_bits.cxx  functions_checked.cxx  functions_generic.cxx  functions_overflowing.cxx  functions_saturating.cxx  functions_strict.cxx  functions_wrapping.cxx  literals.cxx  traits.cxx  unary.cxx
tests/src/types/integer_signed/data/: add-data.hxx  div-data.hxx  mul-data.hxx  pow-data.hxx  rem-data.hxx  sub-data.hxx
tests/src/types/integer_unsigned/: arithmetic.cxx  assignment.cxx  cast.cxx  comparison.cxx  constants.cxx  constructor.cxx  functions.cxx  functions_bits.cxx  functions_checked.cxx  functions_generic.cxx  functions_overflowing.cxx  functions_saturating.cxx  functions_strict.cxx  functions_wrapping.cxx  literals.cxx  traits.cxx
tests/src/types/integer_unsigned/data/: add-data.hxx  div-data.hxx  mul-data.hxx  pow-data.hxx  rem-data.hxx  sub-data.hxx
tests/test_data/: test_data_directory_symlink
(+115 files in other folders)
